# ocaml-process

./: Makefile  Makefile.config  dune-project  process.opam
lib/: dune  process.ml  process.mli
src/: index.mld  process.ml
