(lang dune 1.11)
(package
  (name process)
  (synopsis "Simplified processes interface.")
  (description "A more abstract interface over processes.")
)
(authors "Timothée Haudebourg <timothee.haudebourg@irisa.fr>")
(maintainers "Timothée Haudebourg <timothee.haudebourg@irisa.fr>")
(source (uri inria.gitlab.fr))
(bug_reports inria.gitlab.fr)
(homepage inria.gitlab.fr)
(documentation inria.gitlab.fr)
(generate_opam_files true)
